; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_tcp.c_meth_connect.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_tcp.c_meth_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }
%struct.addrinfo = type { i32, i32 }

@.str = private unnamed_addr constant [9 x i8] c"tcp{any}\00", align 1
@SOCK_STREAM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"tcp{client}\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @meth_connect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @meth_connect(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.addrinfo, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @auxiliar_checkgroup(i32* %9, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 1)
  %11 = sext i32 %10 to i64
  %12 = inttoptr i64 %11 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %12, %struct.TYPE_2__** %4, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i8* @luaL_checkstring(i32* %13, i32 2)
  store i8* %14, i8** %5, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i8* @luaL_checkstring(i32* %15, i32 3)
  store i8* %16, i8** %6, align 8
  %17 = call i32 @memset(%struct.addrinfo* %7, i32 0, i32 8)
  %18 = load i32, i32* @SOCK_STREAM, align 4
  %19 = getelementptr inbounds %struct.addrinfo, %struct.addrinfo* %7, i32 0, i32 1
  store i32 %18, i32* %19, align 4
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = getelementptr inbounds %struct.addrinfo, %struct.addrinfo* %7, i32 0, i32 0
  store i32 %22, i32* %23, align 4
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = call i32 @timeout_markstart(i32* %25)
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 2
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 1
  %31 = load i8*, i8** %5, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = call i8* @inet_tryconnect(i32* %28, i32* %30, i8* %31, i8* %32, i32* %34, %struct.addrinfo* %7)
  store i8* %35, i8** %8, align 8
  %36 = load i32*, i32** %3, align 8
  %37 = call i32 @auxiliar_setclass(i32* %36, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 1)
  %38 = load i8*, i8** %8, align 8
  %39 = icmp ne i8* %38, null
  br i1 %39, label %40, label %46

40:                                               ; preds = %1
  %41 = load i32*, i32** %3, align 8
  %42 = call i32 @lua_pushnil(i32* %41)
  %43 = load i32*, i32** %3, align 8
  %44 = load i8*, i8** %8, align 8
  %45 = call i32 @lua_pushstring(i32* %43, i8* %44)
  store i32 2, i32* %2, align 4
  br label %49

46:                                               ; preds = %1
  %47 = load i32*, i32** %3, align 8
  %48 = call i32 @lua_pushnumber(i32* %47, i32 1)
  store i32 1, i32* %2, align 4
  br label %49

49:                                               ; preds = %46, %40
  %50 = load i32, i32* %2, align 4
  ret i32 %50
}

declare dso_local i32 @auxiliar_checkgroup(i32*, i8*, i32) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i32 @memset(%struct.addrinfo*, i32, i32) #1

declare dso_local i32 @timeout_markstart(i32*) #1

declare dso_local i8* @inet_tryconnect(i32*, i32*, i8*, i8*, i32*, %struct.addrinfo*) #1

declare dso_local i32 @auxiliar_setclass(i32*, i8*, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i32 @lua_pushnumber(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
